ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: webserver-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: webserver.chefphan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webserver
                port:
                  number: 80
